[package]
name = "rosalind"
version = "0.1.0"
authors = ["Alan Kavishe <afksavish@gmail.com>"]
edition = "2018"

[dependencies]
gen_str = { path = "gen_str" }
fib = { path = "fib" }
perm = { path = "perm" }
gene = { path = "gene" }

[dependencies.clap]
version = "~2.31.0"
features = ["yaml"]

[workspace]